--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -67,7 +67,7 @@
   margin-bottom:1em;
 }
 .checked li {
-  background:url(https://anzacday.sites.webriqs.com/img/check.svg) no-repeat left 5px;
+  background:url(https://res.cloudinary.com/db6xmqefe/image/upload/v1539753091/check.svg) no-repeat left 5px;
   padding-left:1.5em;
   margin-bottom:.5em;
 }
