--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,12 +7,11 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  font:18px/1.45 'Montserrat', sans-serif;
+  font:16px/1.45 'Montserrat', sans-serif;
   font-weight:400;
   color:#555;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
-  line-height:1.45;
   margin: 0;
 }
 article,
@@ -95,7 +94,7 @@ a:hover {
 h1, h2, h3, h4 {
   margin:1.414em 0 0.5em;
   font-family:'Roboto', sans-serif;
-  font-weight:300;
+  font-weight:400;
   line-height:1.2;
   letter-spacing:-0.5px;
 }
@@ -138,6 +137,10 @@ small, .font_small {
   color:#cc9a5e;
 }
 
+strong {
+  font-weight: 500;
+}
+
 section {
   position: relative;
 }
@@ -166,6 +169,12 @@ section {
   box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
 }
 
+.main-page ul li {
+  background: url(https://res.cloudinary.com/db6xmqefe/image/upload/v1539753091/check.svg) no-repeat left 5px;
+  padding-left: 1.5em;
+  margin-bottom: .5em;
+  list-style: none;
+}
 @media (max-width:1024px) {
   h1 {
     font-size:6.5vw;
