--- a/src/components/sidebar/index.css
+++ b/src/components/sidebar/index.css
@@ -14,6 +14,7 @@
   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;
+  align-self: stretch;
   -webkit-box-align:center;
       -ms-flex-align:center;
           align-items:center;
@@ -21,6 +22,8 @@
       -ms-flex-pack:center;
           justify-content:center;
   background-color:#c68d4a;
+  background-image: none;
+  padding-left: 0;
 }
 
 #box-side li:nth-child(even) {
