--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -187,6 +187,13 @@ section {
 .main-page ol li {
   margin-bottom: .5em;
 }
+.blockquote p {
+  font-size: 16px;
+}
+.blockquote-footer {
+  background-color: transparent;
+  padding: 0;
+}
 @media (max-width:1024px) {
   h1 {
     font-size:6.5vw;
