--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -193,6 +193,10 @@ section {
   background-color: transparent;
   padding: 0;
 }
+.form-control {
+  padding: 0.8rem;
+  border-radius: 4px;
+}
 ._submit {
   background-color: #a97232;
   color: #fff;
